--- a/website/stylesheets/homepage.css
+++ b/website/stylesheets/homepage.css
@@ -1,11 +1,13 @@
 #traffix_navbar{
-	padding: 25px 0px 25px 10%;
-	border          : 1px solid #E0E0E0;
+	height: 75px;
+	padding: 0px 0px 0px 10%;
+	border-bottom:           : 1px solid #E0E0E0;
   	box-shadow      : 0px 1px 2px 1px rgba(0,0,0,0.08);
 }
 
 #traffix_navbar div{
 	display: inline-block;
+	margin-top: 25px;
 }
 
 #traffix_navbar #navbar_header{
@@ -21,6 +23,7 @@
 	font-size: 18px;
 	color: #000000;
 	letter-spacing: 0px;
+	padding-left: 15px;
 }
 
 #traffix_navbar #navbar_pages{
@@ -29,8 +32,31 @@
 }
 
 #traffix_navbar #navbar_pages span{
+	padding: 26px 10px 26px 10px;
 	font-family: Helvetica;
 	font-size: 18px;
 	color: #000000;
 	letter-spacing: 0px;
+}
+
+#traffix_navbar #navbar_pages span:hover{
+	color: #F6CC3D;
+	background-color: #222D35;
+}
+
+#traffix_navbar #navbar_pages img{
+	width: 22px;
+}
+
+.footer{
+	position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5;
+}
+
+.footer .content{
+	padding-right: 10%;
+    padding-left: 10%;
 }
