--- a/website/stylesheets/homepage.css
+++ b/website/stylesheets/homepage.css
@@ -32,9 +32,9 @@
 }
 
 #traffix_navbar #navbar_pages span{
-	padding: 26px 10px 26px 10px;
+	padding: 28px 10px 28px 10px;
 	font-family: Helvetica;
-	font-size: 18px;
+	font-size: 16px;
 	color: #000000;
 	letter-spacing: 0px;
 }
@@ -45,7 +45,7 @@
 }
 
 #traffix_navbar #navbar_pages img{
-	width: 22px;
+	width: 20px;
 }
 
 .footer{
@@ -57,6 +57,15 @@
 }
 
 .footer .content{
+	padding-top: 20px;
 	padding-right: 10%;
     padding-left: 10%;
+	font-family: Helvetica-Bold;
+	font-size: 10px;
+	color: #000000;
+	letter-spacing: 0px;
+}
+
+.footer .content div{
+	display: inline-block;
 }
