--- a/website/stylesheets/homepage.css
+++ b/website/stylesheets/homepage.css
@@ -52,7 +52,7 @@
 	position: absolute;
     bottom: 0;
     width: 100%;
-    height: 60px;
+    height: 80px;
     background-color: #f5f5f5;
 }
 
@@ -68,4 +68,10 @@
 
 .footer .content div{
 	display: inline-block;
+	padding-right: 20px;
 }
+
+.footer .content #overlay_checkbox, #panels_checkbox{
+	display: block;
+}
+
