--- a/website/stylesheets/homepage.css
+++ b/website/stylesheets/homepage.css
@@ -1,3 +1,46 @@
+html, body{
+	height: 100%;
+}
+
+#splash_screen{
+	position: relative;
+	width: 100%;
+	height: 100%;
+	background-image: url('../images/splashBackground2.png');
+}
+
+#splash_screen h1
+{
+	z-index: 1;
+    position:absolute;    
+	font-family: Lato-Regular;
+	font-size: 64px;
+	color: white;
+	letter-spacing: 0px;
+	text-shadow: 0px 2px 5px rgba(0,0,0,0.50);
+    left:50%;
+    top: 40%;
+    margin-left: -90px;
+}
+
+#splash_screen h2
+{
+	z-index: 1;
+    position:absolute;    
+    font-family: Lato-Regular;
+	font-size: 24px;
+	color: white;
+	letter-spacing: 0px;
+	text-shadow: 0px 2px 5px rgba(0,0,0,0.50);
+    left: 50%;
+    top: 50%;
+    margin-left: -100px;
+}
+
+#content{
+	display: none;
+}
+
 #traffix_navbar{
 	height: 75px;
 	padding: 0px 0px 0px 10%;
