--- a/website/stylesheets/homepage.css
+++ b/website/stylesheets/homepage.css
@@ -69,22 +69,80 @@ html, body{
 	padding-left: 15px;
 }
 
+
 #traffix_navbar #navbar_pages{
 	float: right;
 	padding-right: 5%;
+	margin: 0;
 }
 
-#traffix_navbar #navbar_pages span{
-	padding: 28px 10px 28px 10px;
+#traffix_navbar #navbar_pages ul{
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+#traffix_navbar #navbar_pages ul li{
+	display: inline-block;
+	padding: 26px 20px 26px 20px;
 	font-family: Helvetica;
 	font-size: 16px;
 	color: #000000;
 	letter-spacing: 0px;
+	cursor: default;
 }
 
-#traffix_navbar #navbar_pages span:hover{
+#traffix_navbar #navbar_pages li p{
+	display: inline-block;
+	margin: 0;
+}
+
+#traffix_navbar #navbar_pages ul li ul{
+	display: none;
+	background: #FFFFFF;
+	border: 1px solid #D9D9D9;
+	box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.30);
+}
+
+#traffix_navbar #navbar_pages ul li ul p{
+	cursor: default;
+	font-family: Helvetica-Bold;
+	font-size: 13px;
+	color: #9B9B9B;
+	letter-spacing: 0px;
+	padding: 20px 0px 0px 20px;
+}
+
+#traffix_navbar #navbar_pages ul li ul hr{
+	margin: 0px 15px 0px 15px;
+}
+
+#traffix_navbar #navbar_pages ul li ul li{
+	padding: 15px 0px 15px 0px;
+	font-size: 13px;
+	margin-left: 25px;
+	cursor: pointer;
+	display: block;
+	width: 280px;
+}
+
+#traffix_navbar #navbar_pages ul > li:hover{
 	color: #F6CC3D;
 	background-color: #222D35;
+}
+
+#traffix_navbar #navbar_pages #alert_dropdown:hover ul{
+	display: block;
+	position: absolute;
+	margin-left: -220px;
+	margin-top: 25px;
+}
+
+#traffix_navbar #navbar_pages #hotspot_dropdown:hover ul{
+	display: block;
+	position: absolute;
+	margin-left: -132px;
+	margin-top: 25px;
 }
 
 #traffix_navbar #navbar_pages img{
