--- a/website/stylesheets/homepage.css
+++ b/website/stylesheets/homepage.css
@@ -3,16 +3,24 @@ html, body{
 }
 
 #splash_screen{
-	position: relative;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+
+	z-index: 9999;
+
 	width: 100%;
 	height: 100%;
-	background-image: url('../images/splashBackground2.png');
+	background-image: url('../images/splashBackground2.jpg');
+	background-color: rgb(34,45,53);
 }
 
 #splash_screen h1
 {
 	z-index: 1;
-    position:absolute;    
+    position:absolute;
 	font-family: Lato-Regular;
 	font-size: 64px;
 	color: white;
@@ -38,7 +46,12 @@ html, body{
 }
 
 #content{
-	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+
 	width: 100%;
 	height: 100%;
 }
