--- a/website/stylesheets/homepage.css
+++ b/website/stylesheets/homepage.css
@@ -191,3 +191,29 @@ html, body{
 	margin: 4px 10px 0px 0px;
 }
 
+/* panels */
+.panels {
+	z-index: 43;
+
+	min-height: 300px;
+	min-width: 300px;
+	width: 20%;
+	padding: 20px;
+	border: none;
+	margin-bottom: 20px;
+
+	background: white;
+	border: 1px solid #D9D9D9;
+	box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.30);
+
+	position: absolute;
+}
+	.panels .graph {
+		top: 90px;
+		right: 100px;
+	}
+
+	.panels .stats {
+		top: 410px;
+		right: 100px;
+	}
