--- a/ie-angular-ref-app/app/app.css
+++ b/ie-angular-ref-app/app/app.css
@@ -8,7 +8,7 @@ body {
 .footer {
   margin-left: 100px;
   border-top: 1px solid #414141;
-  position:static;;
+  position:static;
   bottom:0;
   /*width:100%;*/
   height:60px;   /* Height of the footer */
