--- a/ie-angular-ref-app/app/app.css
+++ b/ie-angular-ref-app/app/app.css
@@ -1,50 +1,116 @@
 /* app css stylesheet */
 body {
-  margin:0;
-  padding:0;
-  height:100%;
+	margin:0;
+	padding:0;
+	height:100%;
+
+	font-size: 14px;
+	line-height: 20px;
+	font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
+}
+
+.header {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: 1;
+
+	background: #fff;
+	border-bottom: 1px solid #D9D9D9;
+	box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.30);
+	height: 60px;
+
+	box-sizing: border-box;
+}
+
+.header p {
+	display: inline-block;
+}
+
+.header p.title { font-size: 20px; font-weight: 300; }
+.header p.title span { opacity: 0.5; }
+
+.header p.loading {
+	float: right;
+    margin-top: -10px;
+    line-height: 40px;
+}
+
+	.header p.loading img {
+	    height: 30px;
+	    width: 30px;
+	    vertical-align: middle;
+	    margin-right: 10px;
+	}
+
+.footer .cont,
+.header .cont {
+	width: 960px;
+	margin: 0 auto;
+	padding: 20px 0;
+	line-height: 20px;
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
 
-  background: #fff;
-  border-top: 1px solid #414141;
-  height: 60px;
+	background: #fff;
+	border-top: 1px solid #D9D9D9;
+	box-shadow: 0px -2px 5px 0px rgba(0,0,0,0.30);
+	height: 60px;
+
+	box-sizing: border-box;
 }
 
-  .footer .cont {
-    width: 960px;
-    margin: 0 auto;
-  }
+	.footer ul.inline {
+		margin: 0;
+		padding: 0;
+		list-style: none;
+	}
+
+		.footer ul.inline li {
+			display: inline-block;
+			margin: 0 20px 0 0;
+			padding: 0;
+		}
 
 .mainContentDiv {
-  padding: 0;
-  margin: 0;
-  width: 100%;
+	padding: 0;
+	margin: 0;
+	width: 100%;
 }
 
-#map{
-  position: relative;
+#map {
+	position: relative;
+	margin-top: 60px;
 }
 
-#map .overlay{
-  position: absolute;
-  top: 30px;
-  right: 30px;
-  z-index: 1;
+#map .overlay {
+	position: absolute;
+	top: 0px;
+	right: 10px;
+	z-index: 1;
 
-  width: 25%;
-  height: 40%;
-  border: 1px solid #D9D9D9;
-  padding: 10px;
-  min-width: 300px;
-  min-height: 200px;
+	width: 25%;
+	min-width: 300px;
+}
 
-  background-color: white;
-  
-  box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.30);
+#map .overlay canvas {
+	margin-top: 10px;
+	border: 1px solid #D9D9D9;
+	padding: 10px;
+
+	width: 300px;
+	height: 200px;
+
+	background-color: white;
+	box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.30);
+}
+
+.leaflet-container p {
+    font-size: 12px;
 }
